:children_crossing: Solve color contrast issues in the footer

--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -21,12 +21,12 @@
   }
 
   .footerCopyrights {
-    color: var(--high-contrast-dark);
+    color: var(--high-contrast);
     font-size: 0.875em;
   }
 
   .noCookies {
-    color: var(--high-contrast-dark);
+    color: var(--high-contrast);
   }
 
   .noTracking {
